Fix bug where-in th Visited button would over-stretch

--- a/src/components/venue-profile/venue-profile.css
+++ b/src/components/venue-profile/venue-profile.css
@@ -43,7 +43,8 @@
 
 .venue-profile__user-settings button svg {
     height: 15px;
-    margin-right: 10px
+    margin-right: 10px;
+    width: 15px;
 }
 
 button.venue-profile__favourite-button:hover,
